# Parrallel-Mandelbrot

./: CMakeLists.txt  README.md
src/: bench.cpp  render.cpp  render.hpp  view.cpp
